Forgot to add USE_S2I=='no' so that this doesn't get called in an s2i build

--- a/TensorFlow/playbooks/package_installation/roles/python36_numpy/tasks/main.yaml
+++ b/TensorFlow/playbooks/package_installation/roles/python36_numpy/tasks/main.yaml
@@ -52,7 +52,7 @@
       - make
       - python36-devel
       - subversion
-  when: RHEL_VERSION == '8'
+  when: RHEL_VERSION == '8' and USE_S2I == 'no'
 
 - name: Install yum NumPy requirements for RHEL 8 (for UBI and s2i images only)
   dnf:
