--- a/FFTW/playbooks/FFTW_installation/roles/get/tasks/main.yaml
+++ b/FFTW/playbooks/FFTW_installation/roles/get/tasks/main.yaml
@@ -5,104 +5,93 @@
 ################################################
 #                    RHEL 7                    #
 ################################################
-- name: If using RHEL 7, get FFTW2 source rpm
-  shell: |
-    cd {{ BUILD_DIR }}
-    yumdownloader --source fftw2
-  when: RHEL_VERSION == "7"
+- block:
+  - name: If using RHEL 7, get FFTW2 source rpm
+    shell: |
+      cd {{ BUILD_DIR }}
+      yumdownloader --source fftw2
 
-- name: Unpack source rpm and place the spec file in '{{ BUILD_DIR }}'
-  shell: |
-    cd {{ BUILD_DIR }}
-    rpm2cpio fftw*.rpm | cpio -civ '*.spec'
-  when: RHEL_VERSION == "7"
+  - name: Unpack source rpm and place the spec file in '{{ BUILD_DIR }}'
+    shell: |
+      cd {{ BUILD_DIR }}
+      rpm2cpio fftw*.rpm | cpio -civ '*.spec'
 
-- find:
-    paths: '{{ BUILD_DIR }}'
-    patterns: '*.rpm'
-  register: find_output
-  when: RHEL_VERSION == "7"
+  - find:
+      paths: '{{ BUILD_DIR }}'
+      patterns: '*.rpm'
+    register: find_output
 
-- name: Remove source rpm since we don't need it anymore
-  file:
-    state: absent
-    path: '{{ item["path"] }}'
-  with_items: '{{ find_output["files"] }}'
-  when: RHEL_VERSION == "7"
+  - name: Remove source rpm since we don't need it anymore
+    file:
+      state: absent
+      path: '{{ item["path"] }}'
+    with_items: '{{ find_output["files"] }}'
 
-- name: If using RHEL 7, get FFTW2 version specified in the spec file
-  shell: cd {{ BUILD_DIR }} && cat fftw2.spec | grep "Version:" | rev | cut -d " " -f 1 | rev
-  register: fftw2_version
-  when: RHEL_VERSION == "7"
+  - name: If using RHEL 7, get FFTW2 version specified in the spec file
+    shell: cd {{ BUILD_DIR }} && cat fftw2.spec | grep "Version:" | rev | cut -d " " -f 1 | rev
+    register: fftw2_version
 
-- name: For RHEL 7 only -- FFTW2 version
-  debug:
-    var: fftw2_version.stdout
-  when: RHEL_VERSION == "7"
+  - name: For RHEL 7 only -- FFTW2 version
+    debug:
+      var: fftw2_version.stdout
 
-# There is an FFTW tar file that comes with the source rpm, but we want the original source
-- name: For RHEL 7, get FFTW2 from fftw.org
-  unarchive:
-    src: 'http://fftw.org/fftw-{{ fftw2_version.stdout }}.tar.gz'
-    dest: '{{ BUILD_DIR }}'
-    remote_src: yes
-  when: RHEL_VERSION == "7"
+  # There is an FFTW tar file that comes with the source rpm, but we want the original source
+  - name: For RHEL 7, get FFTW2 from fftw.org
+    unarchive:
+      src: 'http://fftw.org/fftw-{{ fftw2_version.stdout }}.tar.gz'
+      dest: '{{ BUILD_DIR }}'
+      remote_src: yes
 
-- name: If using RHEL 7, Remove FFTW2 spec file
-  file:
-    state: absent
-    path: '{{ BUILD_DIR }}/fftw2.spec'
-  when: RHEL_VERSION == "7"
+  - name: If using RHEL 7, Remove FFTW2 spec file
+    file:
+      state: absent
+      path: '{{ BUILD_DIR }}/fftw2.spec'
 
-- name: Rename fftw-2.x.y to FFTW
-  command: mv {{ BUILD_DIR }}/fftw-{{ fftw2_version.stdout }} {{ BUILD_DIR }}/FFTW
+  - name: Rename fftw-2.x.y to FFTW
+    command: mv {{ BUILD_DIR }}/fftw-{{ fftw2_version.stdout }} {{ BUILD_DIR }}/FFTW
+
   when: RHEL_VERSION == "7"
 
 ################################################
 #                    RHEL 8                    #
 ################################################
-- name: If using RHEL 8, get FFTW3 source rpm
-  shell: |
-    cd {{ BUILD_DIR }}
-    yumdownloader --source fftw3
-  when: RHEL_VERSION == "8"
+- block:
+  - name: If using RHEL 8, get FFTW3 source rpm
+    shell: |
+      cd {{ BUILD_DIR }}
+      yumdownloader --source fftw3
 
-- name: If using RHEL 8, unpack source rpm and place the spec file in '{{ BUILD_DIR }}'
-  shell: |
-    cd {{ BUILD_DIR }}
-    rpm2cpio fftw*.rpm | cpio -civ '*.spec'
-  when: RHEL_VERSION == "8"
+  - name: If using RHEL 8, unpack source rpm and place the spec file in '{{ BUILD_DIR }}'
+    shell: |
+      cd {{ BUILD_DIR }}
+      rpm2cpio fftw*.rpm | cpio -civ '*.spec'
 
-- find:
-    paths: '{{ BUILD_DIR }}'
-    patterns: '*.rpm'
-  register: find_output
-  when: RHEL_VERSION == "8"
+  - find:
+      paths: '{{ BUILD_DIR }}'
+      patterns: '*.rpm'
+    register: find_output
 
-- name: If using RHEL 8, Remove FFTW3 spec file
-  file:
-    state: absent
-    path: '{{ BUILD_DIR }}/fftw.spec'
-  when: RHEL_VERSION == "8"
+  - name: If using RHEL 8, Remove FFTW3 spec file
+    file:
+      state: absent
+      path: '{{ BUILD_DIR }}/fftw.spec'
 
-- name: If using RHEL 8, get FFTW3 version specified in the spec file
-  shell: cd {{ BUILD_DIR }} && cat fftw.spec | grep "Version:" | rev | cut -d " " -f 1 | rev
-  register: fftw3_version
-  when: RHEL_VERSION == "8"
+  - name: If using RHEL 8, get FFTW3 version specified in the spec file
+    shell: cd {{ BUILD_DIR }} && cat fftw.spec | grep "Version:" | rev | cut -d " " -f 1 | rev
+    register: fftw3_version
 
-- name: For RHEL 8 only -- FFTW3 version
-  debug:
-    var: fftw3_version.stdout
-  when: RHEL_VERSION == "8"
+  - name: For RHEL 8 only -- FFTW3 version
+    debug:
+      var: fftw3_version.stdout
 
-# There is an FFTW tar file that comes with the source rpm, but we want the original source
-- name: For RHEL 8, get FFTW3 from fftw.org
-  unarchive:
-    src: 'http://fftw.org/fftw-{{ fftw3_version.stdout }}.tar.gz'
-    dest: '{{ BUILD_DIR }}'
-    remote_src: yes
-  when: RHEL_VERSION == "8"
+  # There is an FFTW tar file that comes with the source rpm, but we want the original source
+  - name: For RHEL 8, get FFTW3 from fftw.org
+    unarchive:
+      src: 'http://fftw.org/fftw-{{ fftw3_version.stdout }}.tar.gz'
+      dest: '{{ BUILD_DIR }}'
+      remote_src: yes
 
-- name: Rename fftw-3.x.y to FFTW
-  command: mv {{ BUILD_DIR }}/fftw-{{ fftw3_version.stdout }} {{ BUILD_DIR }}/FFTW
+  - name: Rename fftw-3.x.y to FFTW
+    command: mv {{ BUILD_DIR }}/fftw-{{ fftw3_version.stdout }} {{ BUILD_DIR }}/FFTW
+
   when: RHEL_VERSION == "8"
