It appears that FFTW3 was removed from ubi8, so we'll just have to ask the user to pass in an FFTW version

--- a/FFTW/playbooks/FFTW_installation/play.yaml
+++ b/FFTW/playbooks/FFTW_installation/play.yaml
@@ -9,6 +9,7 @@
     INSTALL_DIR: '{{ install_dir | default("${HOME}/custom_fftw") }}'
     RHEL_VERSION: '{{ rhel_version | default("7") }}'
     CC: '{{ cc | default("/usr/bin/gcc") }}'
+    FFTW3_VERSION: '{{ fftw3_version | default("3.3.8") }}'
 
   roles:
     # Creates necessary directories for building and installing FFTW
