--- a/FFTW/playbooks/FFTW_installation/roles/get/tasks/main.yaml
+++ b/FFTW/playbooks/FFTW_installation/roles/get/tasks/main.yaml
@@ -56,42 +56,15 @@
 #                    RHEL 8                    #
 ################################################
 - block:
-  - name: If using RHEL 8, get FFTW3 source rpm
-    shell: |
-      cd {{ BUILD_DIR }}
-      yumdownloader --source fftw3
 
-  - name: If using RHEL 8, unpack source rpm and place the spec file in '{{ BUILD_DIR }}'
-    shell: |
-      cd {{ BUILD_DIR }}
-      rpm2cpio fftw*.rpm | cpio -civ '*.spec'
-
-  - find:
-      paths: '{{ BUILD_DIR }}'
-      patterns: '*.rpm'
-    register: find_output
-
-  - name: If using RHEL 8, Remove FFTW3 spec file
-    file:
-      state: absent
-      path: '{{ BUILD_DIR }}/fftw.spec'
-
-  - name: If using RHEL 8, get FFTW3 version specified in the spec file
-    shell: cd {{ BUILD_DIR }} && cat fftw.spec | grep "Version:" | rev | cut -d " " -f 1 | rev
-    register: fftw3_version
-
-  - name: For RHEL 8 only -- FFTW3 version
-    debug:
-      var: fftw3_version.stdout
-
-  # There is an FFTW tar file that comes with the source rpm, but we want the original source
+  # Grab FFTW3 sources
   - name: For RHEL 8, get FFTW3 from fftw.org
     unarchive:
-      src: 'http://fftw.org/fftw-{{ fftw3_version.stdout }}.tar.gz'
+      src: 'http://fftw.org/fftw-{{ FFTW3_VERSION }}.tar.gz'
       dest: '{{ BUILD_DIR }}'
       remote_src: yes
 
-  - name: Rename fftw-3.x.y to FFTW
-    command: mv {{ BUILD_DIR }}/fftw-{{ fftw3_version.stdout }} {{ BUILD_DIR }}/FFTW
+  - name: Rename fftw-{{ FFTW3_VERSION }} to FFTW
+    command: mv {{ BUILD_DIR }}/fftw-{{ FFTW3_VERSION }} {{ BUILD_DIR }}/FFTW
 
   when: RHEL_VERSION == "8"
