Adding recursive argument to 'chmod' command

--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8
@@ -68,7 +68,7 @@ RUN chmod 777 /usr/libexec/s2i/run && \
     mkdir -p /opt/app-root/src/.ansible/tmp && \
     chmod 777 /opt/app-root/src/.ansible/tmp && \
     chmod 777 /opt/app-root/src/.ansible && \
-    chmod 777 /opt/app-root/src/.cache && \
+    chmod -R 777 /opt/app-root/src/.cache && \
     chmod 777 /opt/app-root/src && \
     chmod 777 /opt/app-root
 
