--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8_cuda10.1
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8_cuda10.1
@@ -55,7 +55,7 @@ RUN cd ${FFTW_PREREQS_PLAYBOOK} && \
 
 # Install TensorFlow prerequisites via Ansible
 RUN cd ${TF_PREREQS_PLAYBOOK} && \
-    ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: '8', use_s2i: 'yes', use_gpu: 'yes', cuda_rpm: 'https://developer.download.nvidia.com/compute/cuda/repos/rhel7/x86_64/cuda-repo-rhel7-10.0.130-1.x86_64.rpm'}" && \
+    ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: '8', use_s2i: 'yes', use_gpu: 'yes', cuda_rpm: 'http://developer.download.nvidia.com/compute/cuda/10.1/Prod/local_installers/cuda-repo-rhel8-10-1-local-10.1.243-418.87.00-1.0-1.x86_64.rpm'}" && \
     cd .. && \
     rm -rf ${TF_PREREQS_PLAYBOOK}
 
