Updating 'check_gpu' to install lspci (pciutils). Changing Ansible variables to be lowercase (and changing some names around). Finally, adding 'vars/main.yaml' file for 'install_nccl'

--- a/TensorFlow/playbooks/nccl_installation/roles/check_gpu/tasks/main.yaml
+++ b/TensorFlow/playbooks/nccl_installation/roles/check_gpu/tasks/main.yaml
@@ -1,5 +1,13 @@
 ---
 
+- name: RHEL 7 --> Install lspci
+  yum: pkg=pciutils
+  when: rhel_version == "7"
+
+- name: RHEL 8 --> Install lspci
+  dnf: pkg=pciutils
+  when: rhel_version == "8"
+
 - name: Check for a CUDA-capable GPU
   shell: 'lspci | grep -i nvidia'
   register: nvidia_lspci_output
