Add lspci installation (pciutils)

--- a/TensorFlow/playbooks/package_installation/roles/cuda/tasks/main.yaml
+++ b/TensorFlow/playbooks/package_installation/roles/cuda/tasks/main.yaml
@@ -1,5 +1,13 @@
 ---
 
+- name: RHEL 7 --> Install lspci
+  yum: pkg=pciutils
+  when: RHEL_VERSION == 7
+
+- name: RHEL 8 --> Install lspci
+  dnf: pkg=pciutils
+  when: RHEL_VERSION == 8
+
 - block:
   - name: 'End play if CUDA network rpm is missing'
     debug:
