Adding quotes around '7' and '8' because the 'when' statement wasn't being triggered

--- a/TensorFlow/playbooks/package_installation/roles/cuda/tasks/main.yaml
+++ b/TensorFlow/playbooks/package_installation/roles/cuda/tasks/main.yaml
@@ -2,11 +2,11 @@
 
 - name: RHEL 7 --> Install lspci
   yum: pkg=pciutils
-  when: RHEL_VERSION == 7
+  when: RHEL_VERSION == "7"
 
 - name: RHEL 8 --> Install lspci
   dnf: pkg=pciutils
-  when: RHEL_VERSION == 8
+  when: RHEL_VERSION == "8"
 
 - block:
   - name: 'End play if CUDA network rpm is missing'
